@@ -8,7 +8,7 @@ Old Versions still support GUI, see Tag [v1.1.1](https://github.com/Tyderion/Ani
 
 The following cli commands are available (check designated comamnd help `--help` for more information):
 - `tags`: Test your tag system with example data
-- `config  save`: Convert old config file to new format (or generate a new default config by specifying --default)
+- `config save`: Convert old config file to new format (or generate a new default config by specifying --default)
 - `anidb scan`: Scan given folder for anime, optionally adding them to your mylist and moving the files). Shuts down after scan.
 - `anidb watch`: Watch given folder for new anime, optionally adding them to your mylist and moving the files. Will keep running until stopped.
 - `anidb connect-to-kodi`: Connect to Kodi and mark episodes as watched in your mylist after watching them.
@@ -25,21 +25,22 @@ I suggest using a the watch command to monitor your download folder and automati
    - from old config `java --enable-preview -jar AniAddCli.jar config save config.conf -c oldconfig.conf`
 3. Edit configuration file with the editor of your choice, if you use the tagging system to move just replace it with your system
 4. run AniAddCli to scan and move your files 
-   - scan once: `java -jar AniAddCli.jar -u username -p password -anidb -c config.conf scan /path/to/your/anime/folder`
-   - watch folder: `java -jar AniAddCli.jar -u username -p password -anidb -c config.conf watch /path/to/your/anime/folder`
+   - scan once: `java --enable-preview -jar AniAddCli.jar -u username -p password -anidb -c config.conf scan /path/to/your/anime/folder`
+   - watch folder: `java --enable-preview -jar AniAddCli.jar -u username -p password -anidb -c config.conf watch /path/to/your/anime/folder`
 5. (optional) run AniAddCli to connect to Kodi and mark episodes as watched in your mylist after watching them
    Make sure to enable remote access to JSON-RPC in your Kodi settings
-   - `java -jar AniAddCli.jar -u username -p password -anidb -c config.conf connect-to-kodi --kodi-url <your-kodi-ip>`.
+   - `java --enable-preview -jar AniAddCli.jar -u username -p password -anidb -c config.conf connect-to-kodi --kodi-url <your-kodi-ip>`.
 
 # Docker
 
 There is a docker image available : https://hub.docker.com/r/tyderion/aniadd-cli
 
-## Docker Usage
+## Docker Usage (v4.0.0+)
+
 ### Any Run Configuration
 mounts:
-- `/shows`: Folder to move the files of anime shows into (configurable in settings.conf)
-- `/movies`: Folder to move the files of anime movies into (configurable in settings.conf)
+- `/shows`: Folder to move the files of anime shows into (configurable in your settings file)
+- `/movies`: Folder to move the files of anime movies into (configurable in your settings file)
 
 Env:
 - `ANIDB_USERNAME` [required]: your username
@@ -47,24 +48,39 @@ Env:
 - `ANIDB_CONF` [required]: path to your config file, [example](https://github.com/Tyderion/AniDb-AniAdd-CLI/blob/feature/docker/docker.conf), needs a corresponding mounted location of course :)
 - `LOG_CONFIG_FILE`: Path to a properties file for logging [sample](https://github.com/Tyderion/AniDb-AniAdd-CLI/blob/master/.run/logging.properties). Will be used to update logging configuration and set log levels. Defaults to the linked file.
 
+### Scanning and watching 
+entrypoint: `/app/scan.sh` (default command of docker image)
 
-## Scanning and watching 
-`/app/scan.sh` (v1.1.1+) (default command of docker image)
-`/app/watch.sh` (v4.0.0+)
-mounts:
-- `/from`: Folder containing video files to parse and handle [required], configurable via env var `SCAN_FOLDER` since v4.0.0
-- `/unknown`: Folder to move files into that anidb does not know [v4.0.0+, optional, defaults to /unknown], configurable in your settings file
-- `/duplicates`: Folder to move duplicate files to (alternatively those can be deleted, configurable in settings.conf)[v1.1.1+]
+entrypoint: `/app/watch.sh` 
 
-env:
-- `SCAN_FOLDER` [optional, defaults to /from]: the folder to scan for new anime
+Runs either `scan` or `watch` command.
 
-## Running `/app/kodi.sh` (v. 4.0.0+)
-environment vars:
+#### mounts
+- `/from`: Folder containing video files to parse and handle [required], configurable via env var `SCAN_FOLDER`
+- `/unknown`: Folder to move files into that anidb does not know [optional, defaults to /unknown], configurable in your settings file
+- `/duplicates`: Folder to move duplicate files to (alternatively those can be deleted, configurable in your settings file)
+
+#### Env Vars
+- `SCAN_FOLDER` [optional, defaults to `/from`]: the folder to scan for new anime
+
+### Kodi 
+entrypoint: `/app/kodi.sh`
+
+Runs the `connect-to-kodi` command.
+
+#### Env Vars
 - `KODI_HOST` [required]: the ip/hostname of your kodi instance
 - `KODI_PORT` [optional, default=9090]: the websocket port of your kodi instance
+
+### Flexible Run Configuration
+entrypoint: `/app/run.sh` 
+
+Enables you to run any command you want by specifying it in an env variable.
+
+#### Env Vars
+- `COMMAND` [required]: the command to run (see above), any required args must be set
 
 # Development
 I recommend to use IntelliJ (Community Edition is enough) to develop this project.
 Be sure to install the Lombok Plugin and enable annotation processing in the settings.
-It currently only works with Java 21, higher/lower does not work due to the usage of a preview feature (template strings)
+It currently only works with Java 21, higher/lower does not work due to the usage of template strings
